Adding touring partners. Adding touch device detection. Showing quick look on touch. Setting position of online events grid image bg. Adding touring partners title if there is one (overrides artist).

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -217,6 +217,9 @@ div#video-audio {
     	}
     }
 }
+body.touch-device .overlay {
+	display: block !important;
+}
 
 .artist-photo-wrapper:hover, .magazine-item-thumb:hover {
 	.overlay {
