--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
@@ -52,6 +52,7 @@
 	.online-item-thumb {
 	    height: 300px;
 	    @include full-bg;
+	    background-position: 50% 33%;
 	}
 	
 	.online-category {
