--- a/wp-content/themes/askonasholt2016/assets/scss/components/_tour-wrapper.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_tour-wrapper.scss
@@ -16,6 +16,17 @@
   .tour-thumbnail {
       height: 300px;
       @include full-bg;
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;        
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+      }
   }
   .tour-dates-basic {
       padding: 1.25rem 0;
