--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_photoswipe.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_photoswipe.scss
@@ -688,7 +688,7 @@
 //***************************
 // JB Custom Styles *********
 //***************************
-div#image-gallery {
+div#Gallery {
     //padding-bottom: 50px;
     //border-top: 1px solid #ccc;
 
