--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
@@ -209,13 +209,17 @@
 //animating svg arrow on hover
 a.view-link, .side-bar-artist-name, a.tours-details-link {
   svg {
+    -ms-transition: 0.5s;
+    -webkit-transition: 0.5s;
     transition: 0.5s;
   }
 }
 
 a.view-link:hover, .side-bar-artist-name:hover, a.tours-details-link:hover {
   svg {
-      transform: translate(5px, 0);
+    -ms-transform: translate(5px, 0);
+    -webkit-transform: translate(5px, 0);
+    transform: translate(5px, 0);
   }
 }
 
