--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -151,7 +151,7 @@
 @import "templates/page-sidebar-left";
 @import "templates/page-full-width";
 @import "templates/single-post";
-@import "templates/splash-page";
+// @import "templates/splash-page";
 @import "templates/tours-projects";
 @import "templates/narrow-page";
 @import "templates/single-online";
