--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_single-people.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_single-people.scss
@@ -17,13 +17,20 @@ body.single-people{
   // }
 
   .artist-header.people.container {
-    height: 28em;
+    display: table;
+    width: 100%;
+    min-height: 28em;
     @include full-bg;
     background: $header-beige;
     position: relative;
     border-bottom: 1px solid #cccccc;
+    >.row {
+      display: table-cell;
+      vertical-align: middle;
+    }
     .artist-details-area {
       @include center;
+      position: relative;
       margin: 0 auto;
       width: 100%;
     }
@@ -55,6 +62,13 @@ body.single-people{
     div#single-post {
       //max-width: 90%;
       margin: 0 auto;
+    }
+  }
+}
+@include breakpoint(medium down) {
+  body.single{
+    div#single-post {
+      padding: 0 25px;
     }
   }
 }
