--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -107,7 +107,7 @@ p.byline.author { display: none; }
     line-height: 60px;
 }
 
-.row.toggleable-area:not(.past-tours) .small-12.columns .section-header.small-6.columns {
+.row.toggleable-area:not(.past-tours):not(.performance-schedule) .small-12.columns .section-header.small-6.columns {
     padding-left: 0;
 }
 .section-header,
