--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_filtering-block-general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_filtering-block-general.scss
@@ -6,6 +6,7 @@
 	@include full-bg;
 	//min-height: 200px;
 	min-height: 182px;
+	height: 182px;
 	text-align: center;
 	border-bottom: 1px solid #cccccc;
 	.filtering-block-inner {
