IE fixes. Fixing JS bugs (if foundation.js isn’t included, the JS files don’t generate correct due to dependencies?)

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -29,6 +29,7 @@ section.container {
     > li.opens-left {
         > .is-dropdown-submenu {
             @include center(x);
+            top: 84px;
         }
     }
 }
