--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -251,6 +251,10 @@ span.bold {
     }
 }
 
+#introduction li {
+    font-family: "Brown-Pro-Light", AdobeBlank;
+}
+
 /* Complete Fonts */
 
 @font-face {
