--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_narrow-page.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_narrow-page.scss
@@ -10,5 +10,14 @@ body.single.single-post {
 	#single-post {
 		max-width: 57.375rem;
 		margin: 0 auto;
+
+		.main-content {
+			.row {
+				li {
+					font-family: "Brown-Pro-Light", AdobeBlank;
+				}
+			}
+		}
+
 	}
 }
